fix: overflow change to black, hero overlay

--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -14,24 +14,16 @@
     overflow: hidden; /* Prevent any overflow issues */
   }
 
-  .hero::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* Darken the background */
-    z-index: 0; /* Place it behind the content */
-}
-
   .hero-overlay {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    /* background-color: rgba(0, 0, 0, 0.5); */
+    background-color: rgba(0, 0, 0, 0.5);
+    width: 100vw; /* Ensure it covers the full viewport width */
+    height: 100vh; /* Ensure it covers the full viewport height */
+    z-index: 0;
   }
   
   .hero-content {
